fix overlapping menu

--- a/assets/sass/_components.sass
+++ b/assets/sass/_components.sass
@@ -6,6 +6,7 @@
   top: -0.5rem
   left: 1rem
 .nav
+  padding-top: 0.3rem
   color: $haze
   display: flex
   justify-content: space-between
@@ -142,7 +143,7 @@
     padding: 1.5rem 0
 
 .content
-  padding-top: 5rem
+  padding-top: 11rem // Modified to include from 5rem 10rem to include new row menu
   @include content
 
 .footer
